feat: Aws HSM custom certifcate plugin fix AM-4158 AM-4159
(cherry picked from commit a94caee417eac5e1577f96440e055bede99871cf)